## ---------------------------------------------------------------------
##
## Copyright (c) 2020 - 2020 by the IBAMR developers
## All rights reserved.
##
## This file is part of IBAMR.
##
## IBAMR is free software and is distributed under the 3-clause BSD
## license. The full text of the license can be found in the file
## COPYRIGHT at the top level directory of IBAMR.
##
## ---------------------------------------------------------------------

add_subdirectory(adv_diff)
add_subdirectory(advect)
add_subdirectory(CIB)
add_subdirectory(coarsen)
add_subdirectory(complex_fluids)
add_subdirectory(ConstraintIB)
add_subdirectory(fe_mechanics)
add_subdirectory(interpolate)
add_subdirectory(level_set)
add_subdirectory(multiphase_flow)
add_subdirectory(navier_stokes)
add_subdirectory(physical_boundary)
add_subdirectory(refine)
add_subdirectory(spread)
add_subdirectory(vc_navier_stokes)
add_subdirectory(wave_tank)

add_subdirectory(IB)
add_subdirectory(IBFE)
add_subdirectory(IBTK)
